[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/utils/GimbalCamera.gd" type="Script" id=1]
[ext_resource path="res://scripts/hud/debug/DebugScreen.gd" type="Script" id=2]
[ext_resource path="res://scripts/hud/VehicleInfo.gd" type="Script" id=3]
[ext_resource path="res://city/GameCity.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/debug/DebugScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/VehicleInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://utils/GimbalCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/game/Driving.gd" type="Script" id=8]

[node name="Driving" type="Spatial"]
script = ExtResource( 8 )

[node name="GameCity" type="Spatial" parent="." instance=ExtResource( 4 )]

[node name="PlayerSpawn" type="Position3D" parent="."]
transform = Transform( 0.573576, 0, 0.819152, 0, 1, 0, -0.819152, 0, 0.573576, 48.5, 0, -65.5 )

[node name="GimbalCamera" type="Spatial" parent="." instance=ExtResource( 7 )]
script = ExtResource( 1 )

[node name="VehicleInfo" type="Control" parent="." instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -406.0
margin_top = -316.0
margin_right = 618.0
margin_bottom = 708.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 1024, 1024 )
rect_scale = Vector2( 0.356, 0.356 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugScreen" type="VBoxContainer" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 147.0
margin_bottom = 362.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
